# Multidisciplinary-Data-Analysis

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/multidisciplinary_analysis/: __init__.py  __main__.py  analysis.py  artifacts.py  cli.py
tests/: test_analysis.py  test_artifacts.py  test_cli.py
